--- a/MBTeaI_css.css
+++ b/MBTeaI_css.css
@@ -43,8 +43,8 @@ body {
     justify-content: center;  /* 横中央 */
     align-items: center;      /* 縦中央 */
     margin: auto;
-    width: 40vw;
-    height: 25vw;
+    width: 50vw;
+    height: 30vw;
 }
 aside {/* サイドバー */
   position: fixed;
@@ -63,8 +63,8 @@ aside {/* サイドバー */
     color: #8e0d0d;
 }
 #sns{
-    display: flex;
     list-style: none;
+    display: flex;
 }
 #x{
     margin:0 30px 0 30px;
@@ -84,28 +84,34 @@ aside {/* サイドバー */
 #note{
     margin:0 30px 0 30px;
     width: 100px;
-    height: 100px; 
+    height: 100px;
 }
 .botton {
     background: #0d6828;
-    margin:0 42vw 0 42vw;
-    width: 16vw;
-    height: 80px;
+    margin:0 33.5vw 0 33.5vw;
+    width: 33vw;
+    height: 120px;
     border-radius: 10px;
-    font-size: 24px;
+    font-size: 36px;
     color: #ffffff;
     font-weight: bold;
+    position: relative;
+}
+.botton:hover{
+    background-color: #f8861c;
+}
+.space{
+    height: 20vw;
 }
 footer{
     align-items:center;
     background: #0d6828;
-    position: fixed;
+    position: relative;
     display: flex;
     bottom: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 150px;
-    margin: 0;
 }
 /*診断画面*/
 .text{
@@ -135,6 +141,9 @@ footer{
     color: #ffffff;
     font-weight: bold;
 }
+#btn_q1:hover{
+    transform: scale(1.1);
+}
 #btn_q2{
     background: #14419b;
     width: 20vw;
@@ -145,6 +154,9 @@ footer{
     font-size: 30px;
     color: #ffffff;
     font-weight: bold;
+}
+#btn_q2:hover{
+    transform: scale(1.1);
 }
 /*結果画面*/
 .kekka{
@@ -174,3 +186,123 @@ footer{
     height: 50px;
 }
 /*説明画面*/
+@media (max-width: 600px){/*スマホ用*/
+.botton{
+    background: #0d6828;
+    margin:0 20vw 0 20vw;
+    width: 60vw;
+    height: 80px;
+    border-radius: 10px;
+    font-size: 24px;
+    color: #ffffff;
+    font-weight: bold;
+}
+.logo_mbteai {
+    display: flex;
+    justify-content: center;  /* 横中央 */
+    align-items: center;      /* 縦中央 */
+    margin: auto;
+    width: 400px;
+    height: 250px;
+}
+aside {/* サイドバー */
+  position: relative;
+}
+.space{
+    height: 20vh;
+}
+#sns{
+    list-style: none;
+    display: flex;
+}
+#x{
+    margin:0 18px 0 18px;
+    width: 60px;
+    height: 60px;
+}
+#instagram{
+    margin:0 18px 0 18px;
+    width: 60px;
+    height: 60px;
+}
+#radio{
+    margin:0 18px 0 18px;
+    width: 60px;
+    height: 60px;
+}
+#note{
+    margin:0 18px 0 18px;
+    width: 60px;
+    height: 60px;
+}
+/*診断画面*/
+.text{
+    background-color: rgba(255,255,255,0.6);
+    background-position: relative;
+    margin: 0 5vw;
+}
+#question{
+    width: 80vw;
+    height: 200px;
+    margin: 0 5vw 0 5vw;
+    padding-top: 5vw;
+    font-size: 30px;
+    text-align: center;
+}
+#oxbtn{
+    display: flex;
+    flex-direction: column;
+}
+#btn_q1{
+    background: #8e0d0d;
+    width: 70vw;
+    height: 100px;
+    margin: 0 0 5vw 0;
+    border-radius: 10px;
+    font-size: 30px;
+    color: #ffffff;
+    font-weight: bold;
+}
+#btn_q2{
+    background: #14419b;
+    width: 70vw;
+    height: 100px;
+    margin: 0 0 5vw 0;
+    border-radius: 10px;
+    font-size: 30px;
+    color: #ffffff;
+    font-weight: bold;
+}
+/*結果画面*/
+.kekka{
+    margin:0 10vw 0 10vw;
+    width: 80vw;
+    height: 50px;
+    text-align: center;
+}
+#otyaya_gazou{
+    margin:0 10vw 0 10vw;
+    width: 80vw;
+    height: 200px;
+    margin-bottom: 40px;
+}
+.kekka_bun{
+    margin:0 10vw 0 10vw;
+    width: 80vw;
+    height: 30px;
+    text-align: center;
+}
+#kekka_hyouzi{
+    margin:0 20vw 0 20vw;
+    width: 60vw;
+    height: 160px;
+    font-size: 120px;
+    text-align: center;
+}
+#kekka_setumei{
+    margin:0 20vw 0 20vw;
+    width: 60vw;
+    height: 50px;
+}
+/*説明画面*/
+}
